app/assets/stylesheets/access.scss
// Place all the styles related to the Access controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

//disable scrolling
//html, body {margin: 0; height: 100%; overflow: hidden}

div#login-page {
  background-color: #4aa272;
  height: 100vh;
  width: 100vw;
  position: relative;
  min-width: 400px;
  min-height: 525px;
}

div.entry-right {
  width: 50%;
  height: 100%;
  float: right;
  //background-color: red;
}

div.entry-outer-wrapper {
  display: table;
  position: absolute;
  height: 100%;
  width: 50%;
}

div.entry-inner-wrapper {
  display: table-cell;
  vertical-align: middle;
  //padding-bottom: 6%;
}

div.title{
  font-family: Helvetica;
  font-size: 1000%;
  //margin-top: 25%;
  //margin-left: 30%;
  font-weight: normal;
  //background-color: purple;
  display: block ;
  text-align: center;
  margin-top: 10%;
}

div.mobile-title{
  display: none;
}

div.writeup {
  font-family: Helvetica;
  //font-size: 150%;
  color: #FFFFFF;
  float:right;
  width: 45%;
  height: 60%;
  //padding-top: 17%;
  //padding-right: 10%;
  //background-color: blue;
  text-align: left;
  top: 45%;
  position: absolute;
  left: 55%;
  min-width: 340px;
}

span {
  display: block;
  //margin-top: 1em;
  margin-bottom :1em;
  margin-left: 0;
  margin-right: 0;
  line-height: 10%;
  font-size: 150%;
}

div.entry-left{ //left section of the screen
  width: 50%;
  height: 100%;
  float: left;
  //background-color: pink;
}

div.subsection-left{ //the middle of the left sectui
  position: absolute;
  width: 50%;
  height: 60%;
  margin-left: auto;
  margin-right: auto;
  //margin-top: 20%;
  //margin-bottom: 20%;
  top: 20%;
  //background-color: green;
  text-align: center;
  display:block;
}

img.login-logo{
  display: inline-block;
  height: auto;
  width: auto;
  //max-width: 300px;
  //max-height: 300px;
  min-width: 40%;
  min-height: 40%;
  //background-color: blue;
  text-align: center;
  position: absolute;
  top: 35%;
  left: 10%;
}

.entry-hidden {
  display: none;
}

div.entry {
  margin-left: auto;
  margin-right: auto;
  background-color: #F0F0F0;
  //width: 450px;
  //height: 475px;
  width: 65%;
  padding-bottom: 6%;
  min-width: 400px;
}

div#login-entry {
  padding-top: 100px;
}

div.entry-container {
  margin-bottom: 50px;
  text-align:center;
}

button.entry-button {
  font-family: Helvetica;
  font-size: 20px;
  border: 0;
  float: left;
  margin: 0;
  padding: 0;
  background-color: #E1E1E1;
  width: 50%;
  height: 50px;
  margin-bottom: 25px;
  cursor: pointer;
}

button.entry-selected {
  background-color: #F0F0F0;
}

input.entry-submit-button {
  font-family: Helvetica;
  font-size: 18px;
  width: 100%;
  height: 50px;
  border: 0;
  background-color: #3598DC;
  color: #FFFFFF;
}

input.entry-submit-button:hover {
  background-color: #49ACF0;
  transition: 0.1s;
}

div.entry-input-container {
  height: 52px;
  width: 356px;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  overflow: auto;
  text-align: center;
}

input.entry-input {
  font-family: Helvetica;
  font-size: 18px;
  float: left;
  width: 290px;
  height: 44px;
  padding-left: 10px;
  border-style: solid;
  border-width: 2px;
  border-left-width: 0px;
  border-color: #E1E1E1;
  position: relative;
}

div.entry-icon-container {
  float: left;
  width: 50px;
  height: 50px;
  background-color: #E1E1E1;
}

img.entry-icon {
  float: left;
  width: 25px;
  height: 25px;
  margin: 12.5px;
  color: white;
}

a.entry-link {
  margin-left: auto;
  margin-right: auto;
  color: #3598DC;
  text-decoration: none;
  text-align: center;
}

div.entry-valid {
  background-color: #00A65D;
}

div.entry-invalid {
  background-color: #ED1C24;
}

div.entry-invalid-gain {
  transition: background-color 10s;
  background-color: red;
}

div.entry-invalid-fade {
  transition: background-color 10s;
}

/* Tooltip css generated with http://www.cssportal.com/css-tooltip-generator/*/

div.entry-tooltip {
  position: fixed; /* If regenerating tooltip code, will have to change position: relative to position:fixed*/
  height: 50px;
  width: 50px;
}
div.entry-tooltip span {
  font-family: Helvetica;
  font-size: 16px;
  white-space: pre; /* Needed */
  position: absolute;
  width: auto;
  color: #FFFFFF;
  background: #ED1C24;
  height: 50px;
  line-height: 50px;
  text-align: center;
  visibility: hidden;
  border-radius: 0px;
  padding-left: 5px;
  padding-right: 5px;
  opacity: 0.8;
}
div.entry-tooltip span:after {
  content: '';
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -8px;
  width: 0; height: 0;
  border-left: 8px solid #ED1C24;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;
}
div.entry-tooltip:hover span, div.entry-tooltip-temporary span {
  visibility: visible;
  opacity: 0.8;
  right: 100%;
  top: 50%;
  margin-top: -25px;
  margin-right: 15px;
  z-index: 999;
}

div.entry-tooltip-temporary span {
  opacity: 0;
  transition: opacity;
  transition-duration: 0.5s;
  transition-delay: 1s;
}

#entry-flash-hidden {
  height: 50px;
}

#entry-flash-invalid {
  font-family: Helvetica;
  font-size: 20px;
  color: white;
  text-align: center;
  background-color: red;
  opacity: 0.5;
  height: 50px;
  line-height: 50px;
  margin: 0;
  vertical-align: middle;
}

@media only screen and (max-width: 1400px) and (min-width: 1101px) {
  div.title{font-size: 1000%;}
  div.writeup, span {font-size: 130%;}
}

@media only screen and (max-width: 1500px) and (min-width: 1401px){
  div.title {font-size: 1071.4%;}
  div.writeup, span {font-size: 140%;}
}

@media only screen and (max-width: 1600px) and (min-width: 1501px){
  div.title {font-size: 1142.8%;}
  div.writeup, span {font-size: 150%;}
}

@media only screen and (max-width: 1700px) and (min-width: 1601px){
  div.title {font-size:1214%;}
  div.writeup, span {font-size: 150%;}
}

@media only screen and (max-width: 1800px) and (min-width: 1701px){
  div.title {font-size: 1286%;}
  div.writeup, span {font-size: 150%;}
}

@media only screen and (max-width: 1900px) and (min-width: 1801px){
  div.title {font-size: 1357%;}
  div.writeup, span {font-size: 150%;}
}

@media only screen and (min-width: 1901px){
  div.title {font-size: 1429%;}
  div.writeup, span{font-size: 150%;}
}





//--------------------MOBILE VIEW ---------------------------------------------------

@media only screen and (max-width: 1100px) {
  div#login-page {
    background-color: #4aa272;
    height: 100vh;
    width: 100vw;
    position: relative;
    min-width: 240px;
  }

  div#login-entry {
    padding-top: 50px;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    min-height: 354px;
  }

  #entry-flash-invalid {
    font-family: Helvetica;
    font-size: 20px;
    color: white;
    text-align: center;
    background-color: red;
    opacity: 0.5;
    height: 50px;
    line-height: 20px;
    margin: 0;
    vertical-align: middle;
  }

  div.entry-right {
    width: 100%;
    height: 75%;
    //background-color: red;
    min-width: 200px;
    position: absolute;
    top: 25%;
    padding-top: 2%;
    box-sizing: border-box;
  }

  div.entry-left{ //left section of the screen
    width: 100%;
    height: 100%;
    //background-color: pink;
    text-align: center;
    position: fixed;
    background-color: #4aa272;
    z-index: -999;
  }

  div.entry-outer-wrapper {
    display: table;
    position: absolute;
    height: 100%;
    width: 100%;
    min-width: 200px;
    top: 0%;

  }


  div.entry-inner-wrapper {
    display: table-cell;
    vertical-align: middle;
    width: 100%;
    height: 100%;
    min-width: 200px;
  }

  div.entry {
    margin-left: auto;
    margin-right: auto;
    background-color: #F0F0F0;
    height: 60%;
    width: 85%;
    padding-bottom: 6%;
    min-height: 390px;
    min-width: 200px;
  }

  div.subsection-left{ //the middle of the left sectui
    position: absolute;
    width: 100%;
    height: 25%;
    margin-left: auto;
    margin-right: auto;
    //margin-top: 20%;
    //margin-bottom: 20%;
    top: 0%;
    //background-color: green;
    text-align: center;
    display:block;
    margin-top: 15%;
    display: none;
  }

  img.login-logo{
    display: none;
    height: auto;
    width: auto;
    //max-width: 300px;
    //max-height: 300px;
    min-width: 40%;
    min-height: 40%;
    //background-color: blue;
    text-align: center;
    position: absolute;
    top: 35%;
    left: 15%;
  }

  div.writeup {
    font-family: Helvetica;
    font-size: 150%;
    color: #FFFFFF;
    float:right;
    width: 45%;
    height: 40%;
    //padding-top: 17%;
    //padding-right: 10%;
    //background-color: blue;
    text-align: left;
    top: 45%;
    position: absolute;
    left: 55%;
    display: none;
  }

  div.title{
    font-family: Helvetica;
    font-size: 550%;
    display: inline;
    text-align: center;
    margin-top: 15%;
    //background-color: blue;
    height: 100%;
    width: 100%;
    //margin-top: 10%;
    display: none;
  }

  div.entry-input-container {
    height: 52px;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1%;
    overflow: auto;
    text-align: center;
  }

  div.entry-icon-container {
    float: left;
    width: 14.04%;
    height: 83%;
    max-width: 50px;
    max-height: 50px;
    background-color: #E1E1E1;
  }

  div.entry-valid {
    background-color: #00A65D;
  }

  div.entry-invalid {
    background-color: #ED1C24;
  }

  div.entry-tooltip {
    display: none;
  }

  img.entry-icon {
    float: left;
    width: 50%;
    height: 50%;
    margin: 25%;
    color: white;
  }

  input.entry-input {
    font-family: Helvetica;
    font-size: 18px;
    float: right;
    width: 83.6%;
    height: 44px;
    padding-left: 2.27%;
    border-style: solid;
    border-width: 2px;
    //border-left-width: 0px;
    border-color: #E1E1E1;
    position: relative;
    box-sizing: border-box;
    margin: auto;
  }

  div.mobile-title-container{
    display: inline-block;
    font-family: Helvetica;
    font-size: 700%;
    font-weight: normal;
    //background-color: purple;
    text-align: center;
    position: absolute;
    width: 100%;
    height: 25%;
    //padding-top: 9%;
    //padding-bottom: 9%;
    box-sizing: border-box;
    vertical-align: middle;
  }

  div.mobile-title {
    display: inline;
    font-family: Helvetica;
    //font-size: 100%;
    font-size: 160%;
    vertical-align: middle;
    top: 45%;
    position: relative;
    text-align: center;
  }

}


@media only screen and (max-width: 900px) { //adjust title size
  div.mobile-title {
    font-size: 130%;
  }
}

@media only screen and (max-width: 700px) { //adjust title size
  div.mobile-title {
    font-size: 100%;
  }
}

